force-app/main/default/objects/CB_Party_Relationship__c/CB_Party_Relationship__c.object-meta.xml
<CustomObject>
    <description>UBOs, joint holders, signatories</description>
    <label>CB Party Relationship</label>
    <nameField>
        <label>CB Party Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Party Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>