force-app/main/default/objects/CB_Party_Relationship__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <label>Onboarding Application</label>
    <referenceTo>CB_Onboarding_Application__c</referenceTo>
    <relationshipLabel>CB Party Relationships</relationshipLabel>
    <relationshipName>CB_Party_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>