force-app/main/default/objects/CB_Party_Relationship__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>CB Party Relationships</relationshipLabel>
    <relationshipName>CB_Party_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>