force-app/main/default/objects/CB_Party_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Related Party Accounts</relationshipLabel>
    <relationshipName>CB_Related_Party_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>