force-app/main/default/objects/CB_Party_Relationship__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Contact</relationshipLabel>
    <relationshipName>Related_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>