force-app/main/default/objects/CB_Party_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Joint_Holder</fullName><default>false</default><label>Joint_Holder</label></value><value><fullName>UBO</fullName><default>false</default><label>UBO</label></value><value><fullName>Authorised_Signatory</fullName><default>false</default><label>Authorised_Signatory</label></value><value><fullName>Director</fullName><default>false</default><label>Director</label></value><value><fullName>PSC</fullName><default>false</default><label>PSC</label></value><value><fullName>Partner</fullName><default>false</default><label>Partner</label></value><value><fullName>Executor</fullName><default>false</default><label>Executor</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>